--- a/deploy/job.yaml
+++ b/deploy/job.yaml
@@ -7,9 +7,25 @@ spec:
     metadata:
       name: sparkplayground
     spec:
+      dnsPolicy: Default
       containers:
         - name: sparkplayground
-          image: ubuntu
-          command: ["bash"]
-          args: ["-c",  "current=0; max=70; echo 1; echo 2; for((i=3;i<=max;)); do for((j=i-1;j>=2;)); do if [  `expr $i % $j` -ne 0 ] ; then current=1; else current=0; break; fi; j=`expr $j - 1`; done; if [ $current -eq 1 ] ; then echo $i; fi; i=`expr $i + 1`; done"]
+          image: sustain/sparkplayground
+          imagePullPolicy: Always
+          ports:
+          - containerPort: 50052
+          - containerPort: 9079
+          env:
+          - name: NODE_HOSTNAME
+            valueFrom:
+              fieldRef:
+                fieldPath: spec.nodeName
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_IP
+            valueFrom:
+              fieldRef:
+                fieldPath: status.podIP
       restartPolicy: Never
