--- a/deploy/job.yaml
+++ b/deploy/job.yaml
@@ -9,6 +9,7 @@ spec:
     spec:
       dnsPolicy: Default
       restartPolicy: Never
+      backoffLimit: 1
       containers:
         - name: sparkplayground
           image: sustain/sparkplayground
